--- a/WS03_CSS/index.html
+++ b/WS03_CSS/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>testikansio</title>
+    <title>WS03_CSS</title>
 </head>
 <body>
-    <h1>testikansio</h1>
+    <h1>WS03_CSS</h1>
 </body>
 </html>
