--- a/WS04_Page Layout techniques/index.html
+++ b/WS04_Page Layout techniques/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>testikansio</title>
+    <title>WS04_Page Layout techniques</title>
 </head>
 <body>
-    <h1>testikansio</h1>
+    <h1>WS04_Page Layout techniques</h1>
 </body>
 </html>
