--- a/WS05_Responsive Design/index.html
+++ b/WS05_Responsive Design/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>testikansio</title>
+    <title>WS05_Responsive Design</title>
 </head>
 <body>
-    <h1>testikansio</h1>
+    <h1>WS05_Responsive Design</h1>
 </body>
 </html>
