--- a/WS01_HTML/index.html
+++ b/WS01_HTML/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>interneetti sivu sto</title>
+    <title>My First HTML Page</title>
 </head>
 <body>
-    <h1>interneetti sivu sto</h1>
+    <h1>inters  neetti sivu sto</h1>
+    <p>oon tää kissa </p>
+    <img src="C:\kuva\kissa_kaytos.png" alt="kuva kissasta" style="width:300px; height:auto;">
 </body>
 </html>
+
