--- a/WS04_Page Layout techniques/index.html
+++ b/WS04_Page Layout techniques/index.html
@@ -1,11 +1,67 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WS04_Page Layout techniques</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Page Layout Techniques</title>
+	<link rel="stylesheet" href="styles.css">
+	<style>
+		.page-title { color: #c0392b; }
+	</style>
 </head>
 <body>
-    <h1>WS04_Page Layout techniques</h1>
+	<div class="container">
+		<header>
+			<h1 class="page-title">Page Layout Techniques</h1>
+			<nav>
+				<ul>
+					<li><a href="#flex">Flexbox</a></li>
+					<li><a href="#grid">Grid</a></li>
+					<li><a href="#responsive">Responsive</a></li>
+					<li><a href="#about">About</a></li>
+				</ul>
+			</nav>
+		</header>
+
+		<main>
+			<section id="flex">
+				<h2>Task 1: Flexbox Layout</h2>
+				<div class="flex-container">
+					<div class="box">Box 1</div>
+					<div class="box">Box 2</div>
+					<div class="box">Box 3</div>
+				</div>
+			</section>
+
+			<section id="grid">
+				<h2>Task 2: Grid Layout</h2>
+				<div class="grid-container">
+					<div class="grid-item">1</div>
+					<div class="grid-item">2</div>
+					<div class="grid-item">3</div>
+					<div class="grid-item">4</div>
+					<div class="grid-item">5</div>
+					<div class="grid-item">6</div>
+				</div>
+			</section>
+
+			<section id="responsive">
+				<h2>Task 3: Media Queries</h2>
+				<div class="responsive-box">Resize the window to see the effect</div>
+			</section>
+
+			<section id="about">
+				<h2>Task 4: Semantic Elements</h2>
+				<section id="about-me">
+					<h3>About Me</h3>
+					<p>This example page demonstrates common layout techniques: Flexbox, Grid, Media Queries, and semantic HTML elements.</p>
+				</section>
+			</section>
+		</main>
+
+		<footer>
+			<p class="footer-note">Copyright 2025</p>
+		</footer>
+	</div>
 </body>
 </html>
