--- a/WS05_Responsive Design/index.html
+++ b/WS05_Responsive Design/index.html
@@ -1,11 +1,57 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WS05_Responsive Design</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Responsive Design Examples</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>WS05_Responsive Design</h1>
+  <div class="container">
+    <header>
+      <h1>Responsive Design Examples</h1>
+      <nav class="responsive-nav">
+        <button class="menu-toggle" aria-expanded="false">☰ Menu</button>
+        <ul class="nav-list">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#examples">Examples</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section id="examples">
+        <h2>Responsive Two-Column Layout</h2>
+        <div class="responsive-container">
+          <div class="column">Column 1<br>Some content here.</div>
+          <div class="column">Column 2<br>More content here.</div>
+        </div>
+
+        <h2>Responsive Image</h2>
+        <img class="responsive-image" src="https://images.pexels.com/photos/18065244/pexels-photo-18065244/free-photo-of-hammastynyt-porroinen-kissa.jpeg" alt="Responsive Image">
+
+        <h2>Media Query Box</h2>
+        <div class="media-query-box">Resize the window to see the effect</div>
+      </section>
+    </main>
+
+    <footer>
+      <p class="footer-note">Demo — Responsive layout and navigation (2025)</p>
+    </footer>
+  </div>
+
+  <script>
+
+    (function() {
+      const toggle = document.querySelector('.menu-toggle');
+      const navList = document.querySelector('.responsive-nav .nav-list');
+      if (!toggle || !navList) return;
+      toggle.addEventListener('click', () => {
+        const isOpen = navList.classList.toggle('open');
+        toggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
+      });
+    })();
+  </script>
 </body>
 </html>
