--- a/xtestivaa/index.html
+++ b/xtestivaa/index.html
@@ -37,11 +37,14 @@
     </tr>
     </table>
 
+    <button class="transition-button">mops
+    </button>
+
 
     <form>
-    <label for="name">Name:</label>
+    <label for="name">Nimi:</label>
     <input type="text" id="name" name="name"><br><br>
-    <label for="email">Email:</label>
+    <label for="email">SPosti:</label>
     <input type="email" id="email" name="email"><br><br>
     <input type="submit" value="Submit">
     </form>
