--- a/xtestivaa/index.html
+++ b/xtestivaa/index.html
@@ -12,6 +12,7 @@
         <h1>nettisivu</h1>
         <p>tää on lause,.</p>
         
+        <div class="animation-box"></div>
 
         <div class="content-box">
         <h3>esimerkkiotsikko2?</h3>
@@ -49,4 +50,22 @@
     <input type="submit" value="Submit">
     </form>
     
+    <ul class="pseudo-list">
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+    </ul>
+
+
+    <img src="https://pixnio.com/free-images/2017/09/26/2017-09-26-09-42-55.jpg" alt="Sample Image" class="filter-image">
+
+
+    <blockquote class="quote">
+        OON TÄÄ KISSA.
+      </blockquote>
+
+
+
+
     </html>
