--- a/WS04_Page Layout techniques/index.html
+++ b/WS04_Page Layout techniques/index.html
@@ -3,25 +3,25 @@
 
 
     <header>
-    <h1>My Website</h1>
+    <h1>inter neetti sivu</h1>
     <nav>
       <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#tietoo">tietoo</a></li>
+        <li><a href="#palvelut">palvelut</a></li>
+        <li><a href="#yhteysotto">yhteysotto</a></li>
       </ul>
     </nav>
   </header>
   
   <main>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>This is a paragraph about me.</p>
+    <section id="tietoo">
+      <h2>tietoo</h2>
+      <p>kappale lause 1234.</p>
     </section>
   </main>
   
   <footer>
-    <p>Copyright 2025</p>
+    <p>kopioooikeus 2025</p>
   </footer>
 
 
