--- a/WS04_Page Layout techniques/index.html
+++ b/WS04_Page Layout techniques/index.html
@@ -1,6 +1,8 @@
 ﻿<!DOCTYPE html>
     <html>
 
+    <link rel="stylesheet" href="WS04_Page Layout techniques/styles.css">
+
 
     <header>
     <h1>inter neetti sivu</h1>
@@ -36,7 +38,7 @@
     
     <body>
         <h1>nettisivu</h1>
-        <p>tää on lause,.</p>
+        <p>taa on lause,.</p>
     
 
     <div class="flex-container">
