--- a/WS07_Project/tietoa.html
+++ b/WS07_Project/tietoa.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body>
+  <body class="dark-bg">
     <!-- Task 3: Responsive Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
@@ -45,6 +45,39 @@
 
 
     </main>
+
+    <table class="table table-bordered">
+  <thead>
+    <tr>
+      <th scope="col">Orava-laji</th>
+      <th scope="col">Koko</th>
+      <th scope="col">Elinympäristö</th>
+      <th scope="col">Ominaisuus</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Punainen orava</td>
+      <td>Pieni</td>
+      <td>Havumetsä</td>
+      <td>Punaksi värjäytynyt turva</td>
+    </tr>
+    <tr>
+      <td>Leukkaavi orava</td>
+      <td>Keskikokoinen</td>
+      <td>Lehtometsä</td>
+      <td>Mustat korvantuppilot</td>
+    </tr>
+    <tr>
+      <td>Liintuva orava</td>
+      <td>Suuri</td>
+      <td>Havumetsä</td>
+      <td>Pystyy liitämään puusta puuhun</td>
+    </tr>
+  </tbody>
+</table>
+
+
 
     <!-- Bootstrap JS bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
