--- a/WS07_Project/otayhteytta.html
+++ b/WS07_Project/otayhteytta.html
@@ -43,7 +43,15 @@
         <h1 class="display-6">Ota meihin yhteyttä</h1>
       </header>
 
-
+<form>
+    <label for="name">Nimi:</label>
+    <input type="text" id="name" name="name"><br><br>
+    <label for="email">Sähköposti:</label>
+    <input type="email" id="email" name="email"><br><br>
+    <label for="message">Viesti:</label>
+    <input type="message" id="message" name="message"><br><br>
+    <input type="submit" value="Submit">
+    </form>
 
     </main>
 
