--- a/WS07_Project/otayhteytta.html
+++ b/WS07_Project/otayhteytta.html
@@ -38,20 +38,39 @@
   </div>
 </nav>
 
-    <main class="container my-5">
-      <header class="mb-4">
-        <h1 class="display-6">Ota meihin yhteyttä</h1>
-      </header>
+<main class="container my-5">
+  <header class="mb-4" style="background-color:#251601; border-color :#251601; padding:15px; border-radius:8px;">
+    <h1 class="display-6">Ota meihin yhteyttä</h1> 
+    <p></p>
+    <p>Jos sinulla on kysyttävää oravista tai tästä sivustosta, täytä alla oleva lomake.</p>
+    
+  </header>
 
-<form>
-    <label for="name">Nimi:</label>
-    <input type="text" id="name" name="name"><br><br>
-    <label for="email">Sähköposti:</label>
-    <input type="email" id="email" name="email"><br><br>
-    <label for="message">Viesti:</label>
-    <input type="message" id="message" name="message"><br><br>
-    <input type="submit" value="Submit">
-    </form>
+  <div class="row align-items-start">
+    
+    <!-- KUVA VASEMMALLE -->
+    <div class="col-md-6 mb-4">
+      <img src="https://images.pexels.com/photos/3651623/pexels-photo-3651623.jpeg" class="img-fluid rounded" alt="Orava">
+    </div>
+
+    <!-- FORMI OIKEALLE -->
+    <div class="col-md-6" style="background-color:#251601; border-color :#251601; padding:15px; border-radius:8px;">
+      <form>
+        <label for="name">Nimi:</label><br>
+        <input type="text" id="name" name="name" class="form-control mb-3">
+
+        <label for="email">Sähköposti:</label><br>
+        <input type="email" id="email" name="email" class="form-control mb-3">
+
+        <label for="message">Viesti:</label><br>
+        <textarea id="message" name="message" rows="5" class="form-control mb-3"></textarea>
+
+        <input type="submit" value="Submit" class="btn btn-primary">
+      </form>
+    </div>
+
+  </div>
+</main>
 
     </main>
 
