--- a/WS07_Project/tietoa.html
+++ b/WS07_Project/tietoa.html
@@ -46,36 +46,38 @@
 
     </main>
 
-    <table class="table table-bordered">
-  <thead>
-    <tr>
-      <th scope="col">Orava-laji</th>
-      <th scope="col">Koko</th>
-      <th scope="col">Elinympäristö</th>
-      <th scope="col">Ominaisuus</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Punainen orava</td>
-      <td>Pieni</td>
-      <td>Havumetsä</td>
-      <td>Punaksi värjäytynyt turva</td>
-    </tr>
-    <tr>
-      <td>Leukkaavi orava</td>
-      <td>Keskikokoinen</td>
-      <td>Lehtometsä</td>
-      <td>Mustat korvantuppilot</td>
-    </tr>
-    <tr>
-      <td>Liintuva orava</td>
-      <td>Suuri</td>
-      <td>Havumetsä</td>
-      <td>Pystyy liitämään puusta puuhun</td>
-    </tr>
-  </tbody>
-</table>
+<div class="container my-5">
+  <table class="table table-bordered mx-auto">
+    <thead>
+      <tr>
+        <th scope="col">Orava-laji</th>
+        <th scope="col">Koko</th>
+        <th scope="col">Elinympäristö</th>
+        <th scope="col">Ominaisuus</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Punainen orava</td>
+        <td>Pieni</td>
+        <td>Havumetsä</td>
+        <td>Punaksi värjäytynyt turva</td>
+      </tr>
+      <tr>
+        <td>Leukkaavi orava</td>
+        <td>Keskikokoinen</td>
+        <td>Lehtometsä</td>
+        <td>Mustat korvantuppilot</td>
+      </tr>
+      <tr>
+        <td>Liintuva orava</td>
+        <td>Suuri</td>
+        <td>Havumetsä</td>
+        <td>Pystyy liitämään puusta puuhun</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 
 
