--- a/WS07_Project/lahteet.html
+++ b/WS07_Project/lahteet.html
@@ -37,7 +37,7 @@
   </div>
 </nav>
 
-    <main class="container my-5">
+<main class="container my-5">
       <header class="mb-4">
         <h1 class="display-6">Lähteet</h1>
       </header>
@@ -50,3 +50,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
 </html>
+
+<div class="infobox mb-4">
+  <ul>
+    <li>
+      <span class="orava">🐿️</span>
+      <a href="https://fi.wikipedia.org/wiki/Orava" target="_blank">Wikipedia – Orava</a> 12/12/25
+    </li>
+    <li><span class="orava">🐿️</span> Chatgpt 5, 2-12/12/25</li>
+    <li><span class="orava">🐿️</span> Oma mielikuvitus</li>
+  </ul>
+</div>
+
+
+
