--- a/WS07_Project/tietoa.html
+++ b/WS07_Project/tietoa.html
@@ -47,37 +47,73 @@
     </main>
 
 <div class="container my-5">
-  <table class="table table-bordered mx-auto">
+  <h2>Red squirrel (Punainen orava)</h2>
+  <table class="table table-striped table-bordered mx-auto">
     <thead>
       <tr>
-        <th scope="col">Orava-laji</th>
-        <th scope="col">Koko</th>
-        <th scope="col">Elinympäristö</th>
-        <th scope="col">Ominaisuus</th>
+        <th>Laji</th>
+        <th>Koko</th>
+        <th>Elinympäristö</th>
+        <th>Tunnusmerkki</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>Punainen orava</td>
-        <td>Pieni</td>
-        <td>Havumetsä</td>
-        <td>Punaksi värjäytynyt turva</td>
-      </tr>
-      <tr>
-        <td>Leukkaavi orava</td>
-        <td>Keskikokoinen</td>
-        <td>Lehtometsä</td>
-        <td>Mustat korvantuppilot</td>
-      </tr>
-      <tr>
-        <td>Liintuva orava</td>
-        <td>Suuri</td>
-        <td>Havumetsä</td>
-        <td>Pystyy liitämään puusta puuhun</td>
+        <td>Red squirrel<br>(Sciurus vulgaris)</td>
+        <td>Keskikokoinen (pää + vartalo ~19–23 cm)</td>
+        <td>Boreaaliset ja havumetsät</td>
+        <td>Punasävyinen turkki, pitkä tuuhea häntä</td>
       </tr>
     </tbody>
   </table>
 </div>
+
+
+<div class="container my-5">
+  <h2>Liito-orava (Siberian flying squirrel)</h2>
+  <table class="table table-striped table-bordered mx-auto">
+    <thead>
+      <tr>
+        <th>Laji</th>
+        <th>Koko</th>
+        <th>Elinympäristö</th>
+        <th>Tunnusmerkki</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Liito-orava<br>(Pteromys volans)</td>
+        <td>Pieni (13–21 cm)</td>
+        <td>Varttuneet havu- ja sekametsät</td>
+        <td>Liitopoimut, jotka mahdollistavat liitämisen</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+
+<div class="container my-5">
+  <h2>Etelänliito-orava (Southern flying squirrel)</h2>
+  <table class="table table-striped table-bordered mx-auto">
+    <thead>
+      <tr>
+        <th>Laji</th>
+        <th>Koko</th>
+        <th>Elinympäristö</th>
+        <th>Tunnusmerkki</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Etelänliito-orava<br>(Glaucomys volans)</td>
+        <td>Pieni (≈12–25 cm, mukaan lukien häntä)</td>
+        <td>Lehtimetsät ja sekametsät (Pohjois-Amerikka)</td>
+        <td>Yöllinen, liitopoimun avulla liitävä</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
 
 
 
